TEST_PROGRAMS/INVALID/15/lexer2.go
παψκαγε μαιν΄

φθνψ μαιν() {
	πριντλν("Ηελλο ΅ορλδ!")΄
}
